# Lithium

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: lexer.li  parser.li  preprocessor.li  semantics.li
src/: analyzer.cpp  analyzer.h  compiler.cpp  compiler.h  exceptions.cpp  exceptions.h  lexer.cpp  lexer.h  logger.cpp  logger.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h
